--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.3",
+    "@react-navigation/drawer": "^5.11.5",
+    "@react-navigation/native": "^5.9.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.2",
     "react-native-fs": "https://github.com/avmoroz/react-native-fs.git#dev",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-windows": "^0.63.0-0"
   },
   "devDependencies": {
